# ge211

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  Makefile  README.md  TODO.md  _f_r_o_n_t_m_a_t_t_e_r_8md_source.html  annotated.html  annotated_dup.js  classes.html  classge211_1_1_abstract__game-members.html  classge211_1_1_abstract__game.html  classge211_1_1_abstract__game.js  classge211_1_1_abstract__game__coll__graph.map  classge211_1_1_abstract__game__coll__graph.md5  classge211_1_1_color-members.html  classge211_1_1_color.html  classge211_1_1_color.js  classge211_1_1_font-members.html  classge211_1_1_font.html  classge211_1_1_font.js  classge211_1_1_random-members.html  classge211_1_1_random.html  classge211_1_1_random.js  classge211_1_1_random__source-members.html  classge211_1_1_random__source.html  classge211_1_1_random__source.js  classge211_1_1_sprite__set-members.html  classge211_1_1_sprite__set.html  classge211_1_1_sprite__set.js  classge211_1_1_window-members.html  classge211_1_1_window.html  classge211_1_1_window.js  classge211_1_1_window__coll__graph.map  classge211_1_1_window__coll__graph.md5  classge211_1_1audio_1_1_audio__clip-members.html  (+427 more)
.run/: Build ge211.run.xml  Build-GE211-Docs.run.xml  Fetch-StdLib-Tags.run.xml  Upload-GE211-Docs.run.xml  fireworks.run.xml
Resources/: beep.abc
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  Ge211ClientInstaller.cmake  Ge211Docs.cmake  Ge211Doxygen.cmake  Ge211EmscriptenHelpers.cmake  Ge211Helpers.cmake  Ge211Installer.cmake
doc/: CMakeLists.txt  extradoxy.css
doxy/: Doxyfile
doxygen/: Doxyfile
example/: CMakeLists.txt  fireworks.cxx
examples/: CMakeLists.txt  fireworks.cpp
examples/installed/: CMakeLists.txt  fireworks.cpp  fireworks.cxx
html/: ge211.css  ge211.html.in
include/: ge211.hxx  ge211_audio.h  ge211_audio.hxx  ge211_base.hxx  ge211_color.h  ge211_color.hxx  ge211_doxygen.hxx  ge211_engine.h  ge211_engine.hxx  ge211_error.h  ge211_error.hxx  ge211_event.h  ge211_event.hxx  ge211_forward.hxx  ge211_frame.hxx  ge211_geometry.h  ge211_geometry.hxx  ge211_if_cpp.hxx  ge211_noexcept.hxx  ge211_random.h  ge211_random.hxx  ge211_render.hxx  ge211_resource.hxx  ge211_session.hxx  ge211_sprites.h  ge211_sprites.hxx  ge211_time.hxx  ge211_type_traits.hxx  ge211_util.h  ge211_util.hxx  ge211_window.h  ge211_window.hxx
include/ge211/: audio.hxx  base.hxx  color.hxx  doxygen.hxx  engine.hxx  error.hxx  event.hxx  forward.hxx  frame.hxx  geometry.hxx  random.hxx  render.hxx  resource.hxx  sprites.hxx  time.hxx  util.hxx  version.hxx.in  window.hxx
include/ge211/util/: delete_ptr.hxx  name_of_type.hxx  reflection.hxx  ring_buffer.hxx  stringable.hxx  to_string.hxx
include/util/: delete_ptr.hxx  lazy_ptr.hxx  ring_buffer.hxx
scripts/: autotools_install.sh  emscripten_build.zsh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  classes_3.js  (+79 more)
share/cmake/: Ge211ClientInstaller.cmake  Ge211Config-path.cmake
src/: CMakeLists.txt  audio.cxx  base.cxx  color.cxx  engine.cxx  error.cxx  event.cxx  ge211.h  ge211_audio.cpp  ge211_audio.cxx  ge211_audio.h  ge211_base.cpp  ge211_base.cxx  ge211_base.h  ge211_color.cpp  ge211_color.cxx  ge211_color.h  ge211_engine.cpp  ge211_engine.cxx  ge211_engine.h  ge211_error.cpp  ge211_error.cxx  ge211_error.h  ge211_event.cpp  ge211_event.cxx  ge211_event.h  ge211_forward.h  ge211_geometry.cpp  ge211_geometry.cxx  ge211_geometry.h  ge211_random.cpp  ge211_random.cxx  ge211_random.h  ge211_render.cpp  ge211_render.cxx  ge211_render.h  ge211_resource.cpp  ge211_resource.cxx  ge211_resource.h  ge211_session.cpp  (+16 more)
test/: CMakeLists.txt  common.hxx  doctest.hxx  test_geometry.cxx  test_random.cxx  test_random.hxx  test_random_helpers.hxx  test_util.cxx  test_util.hxx  test_util_containers.cxx  test_util_pointers.cxx  test_util_reflection.cxx  test_util_strings.cxx
